// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders basic Modal correctly 1`] = `
<div
  class="ui-modal"
  style="animation-duration:300ms;position:fixed;display:none"
>
  <div
    class="ui-modal-wrapper"
  >
    <div
      class="ui-modal-dialog zoom-leave"
      style="width:600px;min-width:270px;animation-duration:300ms"
      tabindex="-1"
    >
      <div
        class="ui-modal-header"
      >
        <div
          class="ui-modal-title"
        >
          标题
        </div>
        <div
          class="ui-modal-close"
        >
          <i
            class="zw-icon zw-icon--wrong zw-icon--default zw-icon--md"
            theme="default"
            type="wrong"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
            >
              <use
                href="#wrong"
              />
            </svg>
          </i>
        </div>
      </div>
      <div
        class="ui-modal-body"
        style="height:auto"
      >
        我是一个模态框
      </div>
      <div
        class="ui-modal-footer"
      >
        页脚
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal renders closable Modal correctly 1`] = `
<div
  class="ui-modal"
  style="animation-duration:300ms;position:fixed;display:none"
>
  <div
    class="ui-modal-wrapper"
  >
    <div
      class="ui-modal-dialog zoom-leave"
      style="width:600px;min-width:270px;animation-duration:300ms"
      tabindex="-1"
    >
      <div
        class="ui-modal-header"
      >
        <div
          class="ui-modal-title"
        >
          标题
        </div>
        <div
          class="ui-modal-close"
        >
          <i
            class="zw-icon zw-icon--wrong zw-icon--default zw-icon--md"
            theme="default"
            type="wrong"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
            >
              <use
                href="#wrong"
              />
            </svg>
          </i>
        </div>
      </div>
      <div
        class="ui-modal-body"
        style="height:auto"
      >
        我是一个模态框
      </div>
      <div
        class="ui-modal-footer"
      >
        页脚
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal renders customized Modal correctly 1`] = `
<div
  class="ui-modal radius"
  style="animation-duration:500ms;position:fixed;display:none"
>
  <div
    class="ui-modal-wrapper"
  >
    <div
      class="ui-modal-dialog fade-leave"
      style="width:400px;min-width:270px;animation-duration:500ms"
      tabindex="-1"
    >
      <div
        class="ui-modal-header"
      >
        <div
          class="ui-modal-title"
        >
          标题
        </div>
        <div
          class="ui-modal-close"
        >
          <i
            class="zw-icon zw-icon--wrong zw-icon--default zw-icon--md"
            theme="default"
            type="wrong"
          >
            <svg
              fill="currentColor"
              height="1em"
              viewBox="0 0 32 32"
              width="1em"
            >
              <use
                href="#wrong"
              />
            </svg>
          </i>
        </div>
      </div>
      <div
        class="ui-modal-body"
        style="height:auto"
      >
        我是一个模态框
      </div>
      <div
        class="ui-modal-footer"
      >
        页脚
      </div>
    </div>
  </div>
</div>
`;
